# ChangeLog for app-portage/smart-live-rebuild
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 May 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -smart-live-rebuild-0.3.ebuild, +smart-live-rebuild-0.4.ebuild:
  Version bump.

  02 Apr 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -smart-live-rebuild-0.2.ebuild, +smart-live-rebuild-0.3.ebuild:
  Version bump.

  26 Mar 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -smart-live-rebuild-0.1.ebuild, +smart-live-rebuild-0.2.ebuild:
  Version bump.

  24 Mar 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +smart-live-rebuild-0.1.ebuild, +metadata.xml:
  New ebuild for bug #310975.
