@@ -1,4 +1,4 @@
-DIST smart-live-rebuild-0.4.py.bz2 5159 RMD160 b4fdd1da88fd89eeed661ccca06231ac66d198db SHA1 5228edc489d5c97308cae8bc8e93262de7dea09b SHA256 20c1c14795fd7749d8191cddc735c85e43662e367b19d43c6b10dd7142214483
-EBUILD smart-live-rebuild-0.4.ebuild 441 RMD160 3c12c3617662665149ae7767e46b42a8e595e9eb SHA1 ae775a7347a450554284a5fe9a1d4f64904f0a47 SHA256 916793767f37f72e695cb9085c91dd555a6c302cc1204223810b1258b9042f78
+DIST smart-live-rebuild-0.5.tar.bz2 15252 RMD160 36106ca6a722c6d7a6903a6d167156d09ec60efa SHA1 77244759d08d710945c0ea4de6271315360806e2 SHA256 d891e21613e218f7171885238cebd65368bc3abe15a544e7f17ebeb4ba6efada
+EBUILD smart-live-rebuild-0.5.ebuild 864 RMD160 17dfdf60eb2a3957c68f47afe58a57725211a312 SHA1 2e71dbac36fda5eb11f298f6b7c1de5c7e0062ba SHA256 a0accd0dd1518a7787c89757d4a0209476751eaf20d2fde9e7d6d04af18d2ce3
 MISC ChangeLog 716 RMD160 699b22311e874e9664c70cda41ac9cf657ce5a4c SHA1 0dbafb1eca61284ef958118abe36daeb389f54a7 SHA256 8edccf12ec5f62c83a8cc83c8091621103cddb4efa28a0278161d380f79191cb
 MISC metadata.xml 231 RMD160 6aebfea93d789d2b96ea6d8259dc842dd1fdacd3 SHA1 e10a04c4c18a66af326abc1f40c61b28cc610fae SHA256 48054ea190d00518c1e035fc6663b2368854cdea5ff69a94830e4f9a38260987
