@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*smart-live-rebuild-0.5 (06 Jun 2010)
+
+  06 Jun 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
+  -smart-live-rebuild-0.4.ebuild, +smart-live-rebuild-0.5.ebuild:
+  Version bump.
+
   27 May 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
   -smart-live-rebuild-0.3.ebuild, +smart-live-rebuild-0.4.ebuild:
   Version bump.
